static/psi4manual/1.1.0/_sources/api/psi4.core.Wavefunction.rst.txt


psi4.core.Wavefunction
======================

.. currentmodule:: psi4.core

.. autoclass:: Wavefunction
   :show-inheritance:

   
     
   

   
   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~Wavefunction.Ca
      ~Wavefunction.Ca_subset
      ~Wavefunction.Cb
      ~Wavefunction.Cb_subset
      ~Wavefunction.Da
      ~Wavefunction.Da_subset
      ~Wavefunction.Db
      ~Wavefunction.Db_subset
      ~Wavefunction.Fa
      ~Wavefunction.Fb
      ~Wavefunction.H
      ~Wavefunction.S
      ~Wavefunction.X
      ~Wavefunction.alpha_orbital_space
      ~Wavefunction.aotoso
      ~Wavefunction.arrays
      ~Wavefunction.atomic_point_charges
      ~Wavefunction.basis_projection
      ~Wavefunction.basisset
      ~Wavefunction.beta_orbital_space
      ~Wavefunction.build
      ~Wavefunction.compute_energy
      ~Wavefunction.compute_gradient
      ~Wavefunction.compute_hessian
      ~Wavefunction.deep_copy
      ~Wavefunction.doccpi
      ~Wavefunction.energy
      ~Wavefunction.epsilon_a
      ~Wavefunction.epsilon_a_subset
      ~Wavefunction.epsilon_b
      ~Wavefunction.epsilon_b_subset
      ~Wavefunction.frequencies
      ~Wavefunction.frzcpi
      ~Wavefunction.frzvpi
      ~Wavefunction.get_array
      ~Wavefunction.get_basisset
      ~Wavefunction.get_variable
      ~Wavefunction.gradient
      ~Wavefunction.hessian
      ~Wavefunction.molecule
      ~Wavefunction.nalpha
      ~Wavefunction.nalphapi
      ~Wavefunction.name
      ~Wavefunction.nbeta
      ~Wavefunction.nbetapi
      ~Wavefunction.nfrzc
      ~Wavefunction.nirrep
      ~Wavefunction.nmo
      ~Wavefunction.nmopi
      ~Wavefunction.normalmodes
      ~Wavefunction.nso
      ~Wavefunction.nsopi
      ~Wavefunction.oeprop
      ~Wavefunction.reference_wavefunction
      ~Wavefunction.same_a_b_dens
      ~Wavefunction.same_a_b_orbs
      ~Wavefunction.set_array
      ~Wavefunction.set_basisset
      ~Wavefunction.set_frequencies
      ~Wavefunction.set_gradient
      ~Wavefunction.set_hessian
      ~Wavefunction.set_name
      ~Wavefunction.set_oeprop
      ~Wavefunction.set_print
      ~Wavefunction.set_reference_wavefunction
      ~Wavefunction.set_variable
      ~Wavefunction.shallow_copy
      ~Wavefunction.sobasisset
      ~Wavefunction.soccpi
      ~Wavefunction.variables

   
   

   
   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: Ca
   .. automethod:: Ca_subset
   .. automethod:: Cb
   .. automethod:: Cb_subset
   .. automethod:: Da
   .. automethod:: Da_subset
   .. automethod:: Db
   .. automethod:: Db_subset
   .. automethod:: Fa
   .. automethod:: Fb
   .. automethod:: H
   .. automethod:: S
   .. automethod:: X
   .. automethod:: alpha_orbital_space
   .. automethod:: aotoso
   .. automethod:: arrays
   .. automethod:: atomic_point_charges
   .. automethod:: basis_projection
   .. automethod:: basisset
   .. automethod:: beta_orbital_space
   .. automethod:: build
   .. automethod:: compute_energy
   .. automethod:: compute_gradient
   .. automethod:: compute_hessian
   .. automethod:: deep_copy
   .. automethod:: doccpi
   .. automethod:: energy
   .. automethod:: epsilon_a
   .. automethod:: epsilon_a_subset
   .. automethod:: epsilon_b
   .. automethod:: epsilon_b_subset
   .. automethod:: frequencies
   .. automethod:: frzcpi
   .. automethod:: frzvpi
   .. automethod:: get_array
   .. automethod:: get_basisset
   .. automethod:: get_variable
   .. automethod:: gradient
   .. automethod:: hessian
   .. automethod:: molecule
   .. automethod:: nalpha
   .. automethod:: nalphapi
   .. automethod:: name
   .. automethod:: nbeta
   .. automethod:: nbetapi
   .. automethod:: nfrzc
   .. automethod:: nirrep
   .. automethod:: nmo
   .. automethod:: nmopi
   .. automethod:: normalmodes
   .. automethod:: nso
   .. automethod:: nsopi
   .. automethod:: oeprop
   .. automethod:: reference_wavefunction
   .. automethod:: same_a_b_dens
   .. automethod:: same_a_b_orbs
   .. automethod:: set_array
   .. automethod:: set_basisset
   .. automethod:: set_frequencies
   .. automethod:: set_gradient
   .. automethod:: set_hessian
   .. automethod:: set_name
   .. automethod:: set_oeprop
   .. automethod:: set_print
   .. automethod:: set_reference_wavefunction
   .. automethod:: set_variable
   .. automethod:: shallow_copy
   .. automethod:: sobasisset
   .. automethod:: soccpi
   .. automethod:: variables

   
   
